# hub

./: .env.example  .pre-commit-config.yaml  alembic.ini  docker-compose.yaml  hello.py  pyproject.toml
app/: main.py
app/auth/action/interact/: login.py  register.py
app/auth/action/repo/: auth.py
app/auth/action/store/: auth.py
app/auth/action/usecase/: login.py  register.py
app/auth/api/routes/: auth.py
app/auth/api/schema/: login.py  register.py
app/auth/dto/: auth.py  login.py  register.py
app/auth/exception/: auth.py  base.py  login.py  register.py
app/auth/model/repo/: auth.py
app/auth/service/: crypt.py  token.py
app/auth/store/proto/: auth.py
app/auth/store/repo/: auth.py
app/auth/util/: access.py
app/config/: auth.py  db.py
app/infra/: exc_handler.py
app/infra/admin/: admin.py  auth.py
app/infra/admin/view/: matrix.py  user.py  user_matrix.py
app/infra/alembic/: env.py
app/infra/alembic/versions/: 2025_01_25_1316-35f2d8c4a31c_init.py  2025_03_24_0236-a2ef901a576b_add_secret_key_column_into_matrix_table.py  2025_03_26_0256-e8e80ce5d350_add_secret_key_column_in_matrix.py
app/infra/ioc/: cfg.py  dependencies.py
app/infra/ioc/providers/: db.py
app/matrix/action/interact/: secret_key.py  user_matrix.py
app/matrix/action/store/: user_matrix.py
app/matrix/action/usecase/: secret_key.py  user_matrix.py
app/matrix/api/routes/: user_matrix.py
app/matrix/api/schema/: secret_err.py  user_matrix.py
app/matrix/domain/: matrix.py  user_matrix.py
app/matrix/model/entity/: matrix.py  user_matrix.py
app/matrix/model/repo/: user_matrix.py
app/matrix/store/entity/: matrix.py  user_matrix.py
app/matrix/store/proto/: matrix.py  user_matrix.py
app/matrix/store/repo/: matrix.py  user_matrix.py
app/user/domain/: user.py
app/user/model/entity/: user.py
app/user/model/repo/: user.py
app/user/store/entity/: user.py
docker/: Dockerfile
(+8 files in other folders)
