[project]
name = "hub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgi-correlation-id>=4.3.4",
    "fastapi>=0.115.6",
    "pyaml>=25.1.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
]

[tool.pyright]
exclude = [ ".venv" ]
venvPath = "."
venv = ".venv"
# include = [
# ]
executionEnvironments = [
  { root = "app" },
]
