[project]
name = "hub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgi-correlation-id>=4.3.4",
    "bcrypt>=4.2.1",
    "dishka>=1.4.2",
    "fastapi>=0.115.6",
    "pyaml>=25.1.0",
    "pydantic-settings>=2.7.1",
    "pydantic>=2.10.5",
    "pyjwt>=2.10.1",
    "sqlalchemy>=2.0.37",
    "uvicorn>=0.34.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.1",
    "sqladmin>=0.20.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
]

[tool.pyright]
exclude = [ ".venv" ]
venvPath = "."
venv = ".venv"
# include = [
# ]
executionEnvironments = [
  { root = "app" },
]
